Updating GitHub Repo

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
-          <a href="https://github.com/marielacbv/amethyst" target="_blank">
+          <a href="https://github.com/marielacbv/Amethyst" target="_blank">
             Open-source code</a
           ><span class="author">, by Mariela Baron</span>
         </small>
