--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="title" property="og:title" content="[Content title here]" />
+    <meta property="og:type" content="[Content type here]" />
+    <meta name="image" property="og:image" content="[Image URL here]" />
+    <meta
+      name="description"
+      property="og:description"
+      content="[Content description here]"
+    />
+    <meta name="author" content="[Mariela Baron]" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
