--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="title" property="og:title" content="[Content title here]" />
+    <meta name="title" property="og:title" content="Amethyst Weather App" />
     <meta property="og:type" content="[Content type here]" />
-    <meta name="image" property="og:image" content="[Image URL here]" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://silly-nougat-2f9cb8.netlify.app/"
+    />
     <meta
       name="description"
       property="og:description"
-      content="[Content description here]"
+      content="This is my first app"
     />
-    <meta name="author" content="[Mariela Baron]" />
+    <meta name="author" content="Mariela Baron" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
