--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta
       name="description"
       property="og:description"
-      content="This is my first app"
+      content="The Amethyst Weather App is my first app in HTML, CSS and JavaScript"
     />
     <meta name="author" content="Mariela Baron" />
 
