Image for linkedin featured

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta
       name="image"
       property="og:image"
-      content="https://silly-nougat-2f9cb8.netlify.app/"
+      content="https://files.fm/u/akh9bm2t6"
     />
     <meta
       name="description"
