Update linkedin meta tags

--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="title" property="og:title" content="Amethyst Weather App" />
-    <meta property="og:type" content="[Content type here]" />
+
+    <meta property="og:type" content="Website" />
+
     <meta
       name="image"
       property="og:image"
-      content="https://files.fm/u/akh9bm2t6"
+      content="https://www.dropbox.com/s/h19zlyxh276x939/Amethyst_img.png?dl=0"
     />
+
     <meta
       name="description"
       property="og:description"
-      content="The Amethyst Weather App is my first app in HTML, CSS and JavaScript"
+      content="This website displays the weather of selected city"
     />
+
     <meta name="author" content="Mariela Baron" />
 
     <link
