--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 
     <meta property="og:type" content="Website" />
 
-    <meta
-      name="image"
-      property="og:image"
-      content="https://www.dropbox.com/s/h19zlyxh276x939/Amethyst_img.png?dl=0"
-    />
+    <meta name="image" property="og:image" content="images/art.jpg" />
 
     <meta
       name="description"
