--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:type" content="Website" />
 
-    <meta name="image" property="og:image" content="images/art.jpg" />
+    <meta name="image" property="og:image" content="images/Amethyst_img.png" />
 
     <meta
       name="description"
