--- a/index.html
+++ b/index.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="title" property="og:title" content="Amethyst Weather App" />
-
-    <meta property="og:type" content="Website" />
-
-    <meta name="image" property="og:image" content="images/app.jpg" />
-
+    <meta property="og:title" content="Amethyst Weather App" />
+    <meta property="og:image" content="/images/art.jpg" />
     <meta
-      name="description"
       property="og:description"
-      content="This website displays the weather of selected city"
+      content="Description that will show in the preview"
     />
-
-    <meta name="author" content="Mariela Baron" />
+    <meta property="og:url" content="https://silly-nougat-2f9cb8.netlify.app" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
