--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta property="og:title" content="Amethyst Weather App" />
-    <meta property="og:image" content="/images/app.jpg" />
+    <meta property="og:image" content="images/app.jpg" />
     <meta
       property="og:description"
       content="Description that will show in the preview"
