--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property='og:title' content='Amethyst Weather App'/>
-    <meta property='og:image' content='/images/app.jpg'/>
-    <meta property='og:description' content='Description that will show in the preview'/>
-    <meta property='og:url' content='https://silly-nougat-2f9cb8.netlify.app'/>
+    <meta property="og:title" content="Amethyst Weather App" />
+    <meta property="og:image" content="/images/app.jpg" />
+    <meta
+      property="og:description"
+      content="Description that will show in the preview"
+    />
+    <meta property="og:url" content="https://silly-nougat-2f9cb8.netlify.app" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
